Ajuste de layout, degradê e inclusão da página Sobre

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <nav class="navbar-tabs">
                 <ul class="nav-links">
-                    <li><a href="#sobre" class="tab">Sobre o Lanuper</a></li>
+                    <li><a href="pages/sobreLanuper.html" class="tab">Sobre o Lanuper</a></li>
                     <li><a href="#lojas" class="tab active">Lojas</a></li>
                     <li><a href="#servicos" class="tab">Serviços</a></li>
                     <li><a href="#workshops" class="tab">Workshops</a></li>
@@ -121,7 +121,7 @@
         </div>
     </footer>
 
-    <script src="assets/index.js"></script>
+    <script src="scripts/index.js"></script>
 </body>
 
 </html>
