Atualização da outras páginas.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lanuper Centro Comercial | Itambi</title>
     <link rel="stylesheet" href="styles/comuns.css">
+    <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
@@ -19,7 +20,7 @@
                     <li><a href="pages/sobreLanuper.html" class="tab">Sobre o Lanuper</a></li>
                     <li><a href="#lojas" class="tab active">Lojas</a></li>
                     <li><a href="#servicos" class="tab">Serviços</a></li>
-                    <li><a href="#workshops" class="tab">Workshops</a></li>
+                    <li><a href="./pages/workshops.html" class="tab">Workshops</a></li>
                     <li><a href="#vitrine" class="tab">Vitrine & Eventos</a></li>
                     <li><a href="#contato" class="tab">Contato</a></li>
                 </ul>
@@ -60,7 +61,7 @@
             
                 <p>Capacitação técnica para gerar renda. <br><strong>Garanta sua vaga!</strong></p>
             
-                <button class="btn" onclick="location.href='#contato'">Quero me inscrever</button>
+                <button class="btn" onclick="location.href='./pages/workshops.html'"> Quero me inscrever</button>
             </div>
 
             <div class="card" id="eventos-info">
@@ -72,28 +73,28 @@
         </section>
 
         <section id="vitrine" class="partners-section">
-            <h2>Conheça nossas Lojas e Eventos</h2>
-            <p class="subtitle">Visite nossos parceiros e conheça nosso espaço para festas</p><br>
+            <h2>Conheça as nossas Lojas e o Espaço de Eventos</h2>
+            <p class="subtitle">Visite nossos parceiros e conheça nosso espaço para festas</p><br><br>
 
             <div class="partners-grid">
                 <div class="partner-card">
-                    <img src="images/CineaArtesanatos2.jpg" alt="Loja Parceira" id="eventosCinea">
+                    <img src="images/CineaArtesanatos.png" alt="Loja Parceira" id="eventosCinea">
                     <div class="partner-overlay">
                         <div class="partner-desc">
                             <h3>Loja de Artesanatos para Decoração</h3>
                             <p>Os melhores trabalhos para a decoração de sua casa aqui no Lanuper.</p>
-                            <a href="https://site-da-loja.com" target="_blank" class="btn-visit">Visite o Site</a>
+                            <a href="https://greice-lacerda.github.io/SiteCineaArtes/index.html" target="_blank" class="btn-visit">Visite o Site</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="partner-card">
-                    <img src="images/LogoMarca_AFTeck3.png" alt="Loja Parceira" id="eventosAFTeck">
+                    <img src="images/LogoMarca_AFTeck4.png" alt="Loja Parceira" id="eventosAFTeck">
                     <div class="partner-overlay">
                         <div class="partner-desc">
                             <h3>Montagem e Manutenção</h3>
                             <p>Especialistas em computadores, impressoras, consoles e outras tecnologias para você.</p>
-                            <a href="https://site-da-loja.com" target="_blank" class="btn-visit">Visite o Site</a>
+                            <a href="./pages/Site-AF-TECK/af-teck-index.html" target="_blank" class="btn-visit">Visite o Site</a>
                         </div>
                     </div>
                 </div>
@@ -104,7 +105,7 @@
                         <div class="partner-desc">
                             <h3>Salão de Eventos</h3>
                             <p>Espaço amplo com infraestrutura completa para sua festa ou reunião.</p>
-                            <a href="#contato" class="btn-visit"><b>Em breve</b></a>
+                            <a href="./pages/Site-Lanuper-Eventos/Lanuper-eventos-index.html" class="btn-visit"><b>Em breve</b></a>
                         </div>
                     </div>
                 </div>
