--- a/pages/sobreLanuper.html
+++ b/pages/sobreLanuper.html
@@ -31,21 +31,16 @@
         <section id="sobre" class="about-section">
             <div class="about-container">
                 <div class="about-text">
-                    <h2 style="text-align: center;">Nossa História</h2><br>
+                    <h1 style="text-align: center;">Nossa História</h1><br>
                     <h3 class="highlight-text" style="text-align: center;">Inovação e compromisso com o desenvolvimento de Itambi.</h3><br>
-                    <p style="text-align: justify;">
-                        O <strong>Lanuper Centro Comercial</strong> nasceu do desejo de criar um espaço único que aliasse conveniência, 
-                        serviços modernos e capacitação profissional. Localizado no coração de Itambi, o Lanuper 
-                        se destaca como um hub de soluções para moradores e empreendedores.
-                    </p><br>
-                    <p style="text-align: justify;">
-                        Nossa infraestrutura foi pensada para oferecer segurança e conforto, proporcionando um 
+                    <p class="sobreLanuper">
+                        O <strong>Lanuper Centro Comercial</strong> nasceu do desejo de criar um espaço único que aliasse conveniência, serviços modernos e capacitação profissional. Localizado no coração de Itambi, o Lanuper
+                        se destaca como um hub de soluções para moradores e empreendedores. Desde a sua inauguração, o Lanuper tem se dedicado a oferecer uma experiência de compra e aprendizado que vai além do convencional. <br><br> Com uma variedade de lojas, serviços e workshops, nosso centro comercial é um ponto de encontro para quem busca qualidade, inovação e crescimento pessoal.
+                        Nossa infraestrutura foi pensada para oferecer segurança e conforto, proporcionando um
                         ambiente onde negócios prosperam e pessoas se transformam através do conhecimento.
                     </p><br>
                 </div>
-                <div class="about-image">
-                    <img src="images/LanuperFachadaSite.jpg" alt="Estrutura Lanuper">
-                </div>
+                
             </div>
         </section>
 
@@ -80,17 +75,17 @@
             </div>
         </section>
     </main>
+    
+<footer id="contato">
+    <div class="footer-info">
+        <p><i class="fas fa-map-marker-alt"></i> R. Carlos Alberto Ferreira da Silva, L.1, Q.24 - Itambi</p>
+        <p><i class="fas fa-phone"></i> (21) 96940-9553 | (21) 98887-4861</p>
+        <p><i class="fas fa-envelope"></i> lanupercentrocomercial@gmail.com</p><br>
+        <p class="copyright">&copy; 2026 Lanuper Centro Comercial - Todos os direitos reservados.</p>
+    </div>
+</footer>
 
-    <footer id="contato">
-        <div class="footer-info">
-            <p><i class="fas fa-map-marker-alt"></i> R. Carlos Alberto Ferreira da Silva, L.1, Q.24 - Itambi</p>
-            <p><i class="fas fa-phone"></i> (21) 96940-9553 | (21) 98887-4861</p>
-            <p><i class="fas fa-envelope"></i> lanupercentrocomercial@gmail.com</p>
-            <p class="copyright">&copy; 2026 Lanuper Centro Comercial - Todos os direitos reservados.</p>
-        </div>
-    </footer>
-
-    <script src="../scripts/index.js"></script>
+<script src="scripts/index.js"></script>
 </body>
 
 </html>
