--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
                     style="width: 100%; "><br><br>
                 <h3 class="concurso-title">Não deixe a matemática te eliminar do concurso dos seus sonhos!</h3>
             </div>
-            <div><br><h3 style="color:black; margin: 20px auto;">Confira os editais abertos e previstos. <br> <br>Prepare-se com antecedência.</h3></div>
+            <div><h3 style="color:black; margin: 20px auto; font-size: 26px; ">Matemática para Concursos</h3>
+                <h3 style="color:rgb(50, 46, 46); margin: 20px auto;">Confira os editais abertos e previstos. <br> <br> <i class="fas fa-check" style="color:rgb(154, 243, 59); font-size: 22px; border: solid 4px greenyellow;"></i>  Prepare-se com antecedência.</h3></div>
 
             <div> 
                 <ul
@@ -90,8 +91,9 @@
                     <li>IBGE</li>
                 </ul>
             </div>
-            <div style="margin: 45px auto; font-size: 20px; ">
+            <div style="margin: 10px auto; font-size: 20px; ">
                 <h3>Estamos aqui para te ajudar a realizar esse sonho!</h3><br>
+                <p class="work-text-cards" style="color:black;"> <i class="fas fa-calendar-alt"></i> Início: 07 de Março</p>
                 <strong style="color:black;">Garanta sua vaga!</strong><br>
                 <button class="btn" onclick="location.href='pages/concurso.html'">Saber Mais</button>
             </div>
