--- a/pages/workshops.html
+++ b/pages/workshops.html
@@ -105,6 +105,39 @@
         </div>
 
     </section>
+
+    <section class="grid-cards concurso-section" style="border-bottom: blue solid 6px; border-top: blue solid 6px; padding: 0 20px; border-radius: 25px; margin: 50px 160px; background-color: rgba(0, 255, 255, 0.108);">
+        <div><img src="../images/LanuperConcursos.png" alt="Concurso Lanuper" class="concurso-image"
+                style="width: 100%; "><br><br>
+            <h3 class="concurso-title" style="color: red; font-size: 22px; text-align: center; text-shadow: 2px 2px 1.5px grey;">Não deixe a matemática te eliminar do concurso dos seus sonhos!</h3>
+        </div>
+        <div>
+            <h3 style="color:black; margin: 20px auto; font-size: 26px; text-align: center;">Matemática para Concursos</h3>
+            <h3 style="color:rgb(50, 46, 46); margin: 20px auto;">Confira os editais abertos e previstos. <br> <br> <i
+                    class="fas fa-check"
+                    style="color:rgb(154, 243, 59); font-size: 22px; border: solid 4px greenyellow;"></i> Prepare-se com
+                antecedência.</h3>
+        </div>
+    
+        <div>
+            <ul style="padding-left: 40px; color:black; font-size: 20px; text-align: justify;  margin: 45px auto;">
+                <li>Prefeitura de Itaboraí </li>
+                <li>Maricá (Diversos Cargos)</li>
+                <li>Correios </li>
+                <li>Banco do Brasil </li>
+                <li>PMERJ (Soldado) </li>
+                <li>IBGE</li>
+            </ul>
+        </div>
+        <div style="margin: 10px auto; font-size: 20px; text-align: center;">
+            <h3 style="color:orange; text-shadow: 2px 2px 1px grey;">Estamos aqui para te ajudar a realizar esse sonho!</h3><br>
+            <p class="work-text-cards" style="color:blue; font-weight: bold;"> <i class="fas fa-calendar-alt"></i> Início: 07 de Março</p>
+            <strong style="color:black;">Garanta sua vaga!</strong><br>
+            <button class="btn" onclick="location.href='./concurso.html'">Saber Mais</button>
+        </div>
+        </div>
+    </section>
+
 </main>
 
     <footer id="contato">
@@ -118,4 +151,4 @@
     <script src="../scripts/workshops.js"></script>
 </body>
 
-</html>
+</ht
